--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@ pdfplumber==0.10.3
 langchain==0.3.1
 langchain-community==0.3.1
 langchain-groq==0.3.5
-langchain-core==0.3.7
+langchain-core>=0.3.67,<1.0.0
 sentence-transformers==2.2.2
 faiss-cpu==1.7.4
-# faiss-gpu
 python-dotenv==1.0.0
 streamlit==1.28.0
 numpy==1.25.2
+setuptools>=67.0.0
