--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+setuptools>=67.0.0
+wheel
 pdfplumber==0.10.3
 langchain==0.3.1
 langchain-community==0.3.1
@@ -8,4 +10,3 @@ faiss-cpu==1.7.4
 python-dotenv==1.0.0
 streamlit==1.28.0
 numpy==1.25.2
-setuptools>=67.0.0
