--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-setuptools>=67.0.0
+setuptools
 wheel
-pdfplumber==0.10.3
-langchain==0.3.1
-langchain-community==0.3.1
-langchain-groq==0.3.5
-langchain-core>=0.3.67,<1.0.0
-sentence-transformers==2.2.2
-faiss-cpu==1.7.4
-python-dotenv==1.0.0
-streamlit==1.28.0
-numpy==1.25.2
+pdfplumber
+langchain
+langchain-community
+langchain-groq
+langchain-core
+sentence-transformers
+faiss-cpu
+python-dotenv
+streamlit
+numpy
